# stickerbomb

./: .dockerignore  .gitignore  .grype.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  Tiltfile  cliff.toml  clippy.toml  deny.toml  mise.toml
.github/: dependabot.yml
.github/workflows/: codeql.yaml  pr.yaml  release-pr.yaml  release-publish.yaml  release-security.yaml
charts/stickerbomb/: Chart.yaml  values-dev.yaml  values.schema.json  values.yaml
charts/stickerbomb/crds/: labeler-crd.yaml
charts/stickerbomb/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  networkpolicy.yaml  serviceaccount.yaml
crates/crd/: Cargo.toml
crates/crd/src/: lib.rs  v1_alpha1.rs
crates/operator/: Cargo.toml
crates/operator/src/: controller.rs  diagnostics.rs  lease.rs  lib.rs  main.rs  telemetry.rs
deploy/: crd.yaml
examples/: sample-labeler.yaml
schemas/: labeler_v1alpha1.json
scripts/: dev.sh  lint.sh  release-bump-version.sh  release-pr.sh
