[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
license-file = "LICENSE"
authors = ["Máté Czékus <mate@picloud.hu>"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"

[workspace.dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.1", features = ["latest", "schemars"] }
schemars = { version = "1.2.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

stickerbomb-crd = { path = "crates/crd" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
