[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.93.0"
license = "Apache-2.0"
license-file = "LICENSE"
authors = ["Máté Czékus <mate@picloud.hu>"]
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"

[workspace.dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.1", features = ["latest", "schemars"] }
schemars = { version = "1.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

stickerbomb-crd = { path = "crates/crd" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
