[package]
name = "stickerbomb-crd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[dependencies]
kube = { workspace = true, features = ["derive"] }
k8s-openapi.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
serde_yaml = "0.9.34"

[lints]
workspace = true
